--- a/tech-book-club-landing-page/src/layouts/Layout.astro
+++ b/tech-book-club-landing-page/src/layouts/Layout.astro
@@ -1,17 +1,3 @@
----
-import '../styles/global.css';
-
-interface Props {
-	title?: string;
-	description?: string;
-}
-
-const {
-	title = "Tech Book Club - Join the ultimate tech book club",
-	description = "Join Tech Book Club to turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time."
-} = Astro.props;
----
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -19,10 +5,18 @@ const {
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content={description} />
-		<title>{title}</title>
+		<title>Astro Basics</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
+
+<style>
+	html,
+	body {
+		margin: 0;
+		width: 100%;
+		height: 100%;
+	}
+</style>
