--- a/tech-book-club-landing-page/src/pages/index.astro
+++ b/tech-book-club-landing-page/src/pages/index.astro
@@ -1,26 +1,11 @@
 ---
-import About from '../components/About.astro';
-import Cta from '../components/Cta.astro';
-import Features from '../components/Features.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import Hero from '../components/Hero.astro';
-import Journey from '../components/Journey.astro';
-import Pricing from '../components/Pricing.astro';
-import Testimonial from '../components/Testimonial.astro';
+import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+
+// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
+// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <Header />
-  <main>
-    <Hero />
-    <Features />
-    <About />
-    <Journey />
-    <Pricing />
-    <Testimonial />
-    <Cta />
-  </main>
-  <Footer />
+	<Welcome />
 </Layout>
