--- a/tech-book-club-landing-page/src/components/Feature2.astro
+++ b/tech-book-club-landing-page/src/components/Feature2.astro
@@ -1,6 +1,8 @@
 ---
 // Import images and assets
-import featureImage from '../assets/images/feature-discussion-group.webp';
+import featureImageDesktop from '../assets/images/image-read-together-desktop.webp';
+import featureImageMobile from '../assets/images/image-read-together-mobile.webp';
+import featureImageTablet from '../assets/images/image-read-together-tablet.webp';
 ---
 
 <section class="py-16 md:py-24 bg-[#FFF5EF] overflow-hidden">
@@ -48,13 +50,28 @@ import featureImage from '../assets/images/feature-discussion-group.webp';
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
           </svg>
         </div>
-        <img
-          src={featureImage.src}
-          alt="Tech professionals discussing coding concepts"
-          class="w-full h-auto rounded-[20px] shadow-lg relative z-0"
-          width="600"
-          height="400"
-        />
+        <picture>
+          <source
+            srcset={featureImageDesktop.src}
+            media="(min-width: 1024px)"
+            width="600"
+            height="400"
+          />
+          <source
+            srcset={featureImageTablet.src}
+            media="(min-width: 768px)"
+            width="500"
+            height="350"
+          />
+          <img
+            src={featureImageMobile.src}
+            alt="Tech professionals discussing coding concepts"
+            class="w-full h-auto rounded-[20px] shadow-lg relative z-0"
+            width="400"
+            height="300"
+            loading="lazy"
+          />
+        </picture>
       </div>
     </div>
   </div>
