--- a/tech-book-club-landing-page/src/pages/index.astro
+++ b/tech-book-club-landing-page/src/pages/index.astro
@@ -1,26 +1,11 @@
 ---
-import Cta from '../components/Cta.astro';
-import Feature1 from '../components/Feature1.astro';
-import Feature2 from '../components/Feature2.astro';
-import Footer from '../components/Footer.astro';
-import Hero from '../components/Hero.astro';
-import Membership from '../components/Membership.astro';
-import Process from '../components/Process.astro';
-import Testimonial from '../components/Testimonial.astro';
+import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+
+// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
+// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<main>
-		<Hero />
-		<Feature1 />
-		<Feature2 />
-		<Process />
-		<div id="memberships">
-			<Membership />
-		</div>
-		<Testimonial />
-		<Cta />
-	</main>
-	<Footer />
+	<Welcome />
 </Layout>
