--- a/tech-book-club-landing-page/src/pages/index.astro
+++ b/tech-book-club-landing-page/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import CTASection from '../components/CTASection.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import HeroSection from '../components/HeroSection.astro';
+import MembershipSection from '../components/MembershipSection.astro';
+import NotAverageSection from '../components/NotAverageSection.astro';
+import ReadTogetherSection from '../components/ReadTogetherSection.astro';
+import TechJourneySection from '../components/TechJourneySection.astro';
+import TestimonialSection from '../components/TestimonialSection.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+
 ---
 
 <Layout>
-	<Welcome />
+	<Header />
+	<main>
+		<HeroSection />
+		<ReadTogetherSection />
+		<NotAverageSection />
+		<TechJourneySection />
+		<MembershipSection />
+		<TestimonialSection />
+		<CTASection />
+	</main>
+	<Footer />
 </Layout>
