fix(assets): 🐛 update image paths for asset references

--- a/tech-book-club-landing-page/src/components/Footer.astro
+++ b/tech-book-club-landing-page/src/components/Footer.astro
@@ -12,10 +12,10 @@
 
     <div class="social-links flex gap-300">
       <a href="#" class="text-neutral-700 hover:text-neutral-0 transition-colors">
-        <img src="/assets/images/logo-linkedin.svg" alt="LinkedIn" class="w-[24px] h-[24px]" />
+        <img src="../assets/images/logo-linkedin.svg" alt="LinkedIn" class="w-[24px] h-[24px]" />
       </a>
       <a href="#" class="text-neutral-700 hover:text-neutral-0 transition-colors">
-        <img src="/assets/images/logo-bluesky.svg" alt="Bluesky" class="w-[24px] h-[24px]" />
+        <img src="../assets/images/logo-bluesky.svg" alt="Bluesky" class="w-[24px] h-[24px]" />
       </a>
     </div>
   </div>
