--- a/tech-book-club-landing-page/src/components/MembershipSection.astro
+++ b/tech-book-club-landing-page/src/components/MembershipSection.astro
@@ -18,11 +18,11 @@ import Button from './ui/Button.astro';
         </div>
         <ul class="features mb-400 space-y-200">
           <li class="flex items-center">
-            <img src="/assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
+            <img src="../assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
             <span class="text-neutral-700 font-martian text-[14px]">1 book/month</span>
           </li>
           <li class="flex items-center">
-            <img src="/assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
+            <img src="../assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
             <span class="text-neutral-700 font-martian text-[14px]">Online forums</span>
           </li>
         </ul>
@@ -75,11 +75,11 @@ import Button from './ui/Button.astro';
         </div>
         <ul class="features mb-400 space-y-200">
           <li class="flex items-center">
-            <img src="/assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
+            <img src="../assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
             <span class="text-neutral-700 font-martian text-[14px]">Team access</span>
           </li>
           <li class="flex items-center">
-            <img src="/assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
+            <img src="../assets/images/icon-check.svg" alt="" class="w-[20px] h-[20px] mr-150" />
             <span class="text-neutral-700 font-martian text-[14px]">Private sessions</span>
           </li>
         </ul>
