--- a/tech-book-club-landing-page/src/components/TestimonialSection.astro
+++ b/tech-book-club-landing-page/src/components/TestimonialSection.astro
@@ -1,12 +1,13 @@
 ---
 // Testimonial section component
+import iconStar from '../assets/images/icon-star.svg';
 ---
 
 <section class="testimonial py-600 md:py-800 px-400 md:px-600">
   <div class="container mx-auto max-w-[900px]">
     <div class="stars flex justify-center mb-300">
       {Array(5).fill(0).map((_, i) => (
-        <img src="../assets/images/icon-star.svg" alt="" class="w-[24px] h-[24px] mx-100" />
+        <img src={iconStar.src} alt="" class="w-[24px] h-[24px] mx-100" />
       ))}
     </div>
 
