--- a/tech-book-club-landing-page/src/components/ui/SocialProof.astro
+++ b/tech-book-club-landing-page/src/components/ui/SocialProof.astro
@@ -18,12 +18,5 @@ const {
   <div class="avatars-container mr-200">
     <img src={avatarsSrc} alt="Member avatars" class="h-auto w-[120px]" />
   </div>
-  <p class={`text-${textColor} font-martian text-[14px]`}>{content}</p>
+  <p class={`text-${textColor} font-martian text-preset-7`}>{content}</p>
 </div>
-
-<style>
-  .social-proof p {
-    letter-spacing: -1px;
-    line-height: 120%;
-  }
-</style>
